--- a/_includes/nav-footer-custom.html
+++ b/_includes/nav-footer-custom.html
@@ -1,5 +1,12 @@
 <footer>
 	
 	<!-- Your custom nav footer here -->
+		
+	<span>Seguimi su:</span>	 
+	  <a class="social github" href="https://github.com/KingFelix"></a>
+      <a class="social linkedin" href="https://www.linkedin.com/in/jacopo-rabolini-a8824426"></a>
+      <a class="social behance" href="https://www.behance.net/jacoporabolini"></a>
+      <a id="theme" href="/emerald">Sito basato su Emerald</a>
+
 	
 </footer>
