--- a/_includes/header-custom.html
+++ b/_includes/header-custom.html
@@ -1,5 +1,8 @@
 <header id="header">
-
-	<!-- Your custom header here -->
+	
+	<a href="{{ site.baseurl }}/">
+<!--		<img src="{{ "/img/pulchritude.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="Emerald Logo">-->
+	  <h1>Hi -Jimmy</h1>
+	</a>
 	
 </header>
