--- a/_includes/header-custom.html
+++ b/_includes/header-custom.html
@@ -1,7 +1,7 @@
 <header id="header">
 	
 	<a href="{{ site.baseurl }}/">
-<!--		<img src="{{ "/img/pulchritude.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="Emerald Logo">-->
+		<img src="{{ "/img/smile.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="=]">
 	  <h1>Hi -Jimmy</h1>
 	</a>
 	
