--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -18,11 +18,16 @@ html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, img {
 
 /*- Base color -*/
 
-$main-color: hotpink;
-$background-color: black;
-$text-color: lightpink;
+$main-color: #FFA07A;
+$background-color: #FFF;
+$text-color: #4682B4;
+
 
 /*- Base settings -*/
+
+//$main-color: #008A3C;
+//$background-color: #FDFDFD;
+//$text-color: #222222;
 
 html {
 	background-color: $background-color;
