--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,8 @@
 	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 
 	<!-- Favicon -->
-	<link rel="icon" href="{{ "img/favicon.png" | prepend: site.baseurl }}">
+	<link rel="apple-touch-icon-precomposed" href="img/favicon.png" />
+	<link rel="icon" href="img/favicon.png" type="image/ico" />
 
 
 </head>
