--- a/_includes/nav-footer-custom.html
+++ b/_includes/nav-footer-custom.html
@@ -1,12 +1,9 @@
 <footer>
 	
 	<!-- Your custom nav footer here -->
-		
-	<span>Seguimi su:</span>	 
-	  <a class="social github" href="https://github.com/KingFelix"></a>
-      <a class="social linkedin" href="https://www.linkedin.com/in/jacopo-rabolini-a8824426"></a>
-      <a class="social behance" href="https://www.behance.net/jacoporabolini"></a>
-      <a id="theme" href="/emerald">Sito basato su Emerald</a>
-
+	<span>If you're a spambot don't contact me. Honor system.</span>
+	<a href="https://github.com/JimmyJHickey"><i class="fab fa-github"></i> Github</a>
+	<a href="https://www.linkedin.com/in/jimmyjhickey/"><i class="fab fa-linkedin-in"></i> Linkedin </a>
+	<i class="far fa-envelope"></i> jimmyjhickey[at]gmail.com
 	
 </footer>
