Still trying to fix url problems

--- a/_includes/header-custom.html
+++ b/_includes/header-custom.html
@@ -1,6 +1,6 @@
 <header id="header">
 	
-	<a href="{{ site.baseurl }}">
+	<a href="{{ site.url }}">
 		<img src="{{ "/img/smile.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="=]">
 	  <h1>Hi -Jimmy</h1>
 	</a>
