Updated targets to blank on nav footer

--- a/_includes/nav-footer-custom.html
+++ b/_includes/nav-footer-custom.html
@@ -2,8 +2,8 @@
 	
 	<!-- Your custom nav footer here -->
 	<span>If you're a spambot don't contact me. Honor system.</span>
-	<a href="https://github.com/JimmyJHickey"><span class="icon-github"></span> Github</a>
-	<a href="https://www.linkedin.com/in/jimmyjhickey/"><span class="icon-linkedin"></span> Linkedin </a>
+	<a href="https://github.com/JimmyJHickey" target="_blank"><span class="icon-github"></span> Github</a>
+	<a href="https://www.linkedin.com/in/jimmyjhickey/" target="_blank"	><span class="icon-linkedin"></span> Linkedin </a>
 	<span class="icon-envelope-o"></span> jimmyjhickey[at]gmail.com
 	
 </footer>
