Updated color of button

--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,1 +1,8 @@
 <script src="{{ "/js/main.js" | prepend: site.baseurl | replace: '//', '/' }}"></script>	
+
+<script src="https://unpkg.com/vanilla-back-to-top@7.2.0/dist/vanilla-back-to-top.min.js"></script>
+<script>addBackToTop({
+  diameter: 56,
+  backgroundColor: '#4682B4',
+  textColor: '#fff'
+})</script>
