trying to change mobile browser color

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,7 @@
 	<link rel="apple-touch-icon-precomposed" href="/img/favicon.png" />
 	<link rel="icon" href="/img/favicon.png" type="image/ico" />
 
+	
+	<meta name="theme-color" content="$theme-color" />
 
 </head>
