Fixed header image margin

--- a/_includes/header-custom.html
+++ b/_includes/header-custom.html
@@ -1,7 +1,7 @@
 <header id="header">
 	
 	<a href="{{ site.url }}">
-		<img src="{{ "/img/smile.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="=]">
+		<img src="{{ "/img/smile.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="=]" class="header-image">
 	  <h1>Hi -Jimmy</h1>
 	</a>
 	
