--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,6 @@
 	<link rel="icon" href="/img/favicon.png" type="image/ico" />
 
 	
-	<meta name="theme-color" content="$theme-color" />
+	<meta name="theme-color" content="$main-color" />
 
 </head>
