Added MathJax import

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,9 @@
 	<link rel="icon" href="/img/favicon.png" type="image/ico" />
 
 	
-	<meta name="theme-color" content="$main-color" />
+	<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
+	
+	<meta name="theme-color" content="#FFA07A" />
 
 </head>
