--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,10 +22,14 @@
 
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
-          tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+            tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+            CommonHTML: { linebreaks: { automatic: true } },
+            "HTML-CSS": { linebreaks: { automatic: true } },
+            SVG: { linebreaks: { automatic: true } }
         });
     </script>
-<!--    <script type="text/javascript" async src="path-to-mathjax/MathJax.js?config=TeX-AMS_CHTML"></script>-->
+
+    
     
 	
 	<meta name="theme-color" content="#FFA07A" />
