--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -9,3 +9,17 @@ ul, ol, p{
 .header-image{
 	margin: 25px 0 0 0;
 }
+
+table{
+    margin-left:auto; 
+    margin-right:auto;
+    text-align:center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+td
+{
+    padding: 0 40px 0 40px;
+}
+
