--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -200,12 +200,12 @@ img {
           border-radius: 4px;
 }
 
-img[title="Emerald"] {
+img[title="Hi -Jimmy"] {
     box-shadow: 0 2px 6px #ddd;
   }
 
 code {
-  color: lighten($text-color, 35%);
+  color: darken($text-color, 10%);
   background-color: lighten($background-color, 35%);
 }
 
