--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,11 +24,14 @@
         MathJax.Hub.Config({
 
         
-            tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+            tex2jax: 
+			{
+				inlineMath: [['$','$'], ['\\(','\\)']],
+				processEscapes: true
+			},
             CommonHTML: { linebreaks: { automatic: true } },
             "HTML-CSS": { linebreaks: { automatic: true } },
             SVG: { linebreaks: { automatic: true } }
-
 
         });
     </script>
