--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,7 +5,10 @@
 		<!-- Nav pages -->
 	  {% for page in site.pages %}
 	    {% if page.layout == "page" %}
-	      <a href="{% if site.baseurl == "/" %}{{ page.url }}{% else %}{{ page.url | prepend: site.baseurl }}{% endif %}" title="{{ page.title }}">{{ page.title }}</a>
+			<!-- unless gets rid of pagination putting all pages in sidebar and prevent home page from being represented twice-->
+			{% unless page.url contains "page" or page.title == "Home" %}
+		      <a href="{% if site.baseurl == "/" %}{{ page.url }}{% else %}{{ page.url | prepend: site.baseurl }}{% endif %}" title="{{ page.title }}">{{ page.title }}</a>
+			{% endunless %}
 	    {% endif %}
 	  {% endfor %}
     
