Changed code blocks

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,11 @@
 	<link rel="apple-touch-icon-precomposed" href="/img/favicon.png" />
 	<link rel="icon" href="/img/favicon.png" type="image/ico" />
 
-	
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    
+    <!-- Mathjax -->
 	<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
     <script type="text/x-mathjax-config">
